--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "clone-pull",
   "version": "1.0.0",
-  "source": ["src/index.html"],
+  "source": [
+    "src/index.html"
+  ],
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
@@ -9,5 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.6.0"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.0-beta1"
   }
 }
